--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,7 @@
             "aot": true,
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/bootstrap/dist/css/bootstrap-grid.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
